--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -14,3 +14,18 @@
 
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+.cardContents {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem;
+}
+
+.header {
+  font-size: 5rem;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 1rem;
+}
