:lipstick: Fix underline discrepancy

--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -33,14 +33,15 @@
   text-decoration: none;
   margin-bottom: 3rem;
   position: relative;
+  color: #132445;
 }
 
 .text::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -2px; /* Adjust as needed */
+  bottom: 2px; /* Adjust as needed */
   width: 100%;
   height: 2px; /* Thickness of the underline */
-  background-color: black;
+  background-color: #132445;
 }
