--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -31,7 +31,7 @@
   font-weight: 500;
   font-size: xx-large;
   text-decoration: none;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   position: relative;
   color: #132445;
 }
@@ -40,8 +40,14 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 2px; /* Adjust as needed */
+  bottom: 2px;
   width: 100%;
   height: 2px; /* Thickness of the underline */
   background-color: #132445;
+}
+
+.paragraph {
+  font-size: x-large;
+  font-weight: 200;
+  padding-bottom: 3rem;
 }
