--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100%;
-  margin-top: -2rem;
+  /* margin-top: -rem; */
 
   background: linear-gradient(
     to bottom,
