--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -31,6 +31,10 @@
   padding-top: 1rem;
 }
 
+.image2 {
+  padding-right: 1.9rem;
+}
+
 .textContent {
   padding-right: 2rem;
 }
@@ -122,7 +126,7 @@
   justify-content: space-around;
   align-items: center;
 
-  margin: 2rem;
+  margin: 3rem;
 }
 
 .card1 {
