:art: New images for the product pages introduced

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -228,3 +228,11 @@
     transform: rotate(0deg);
   }
 }
+
+.productContainer {
+  background: linear-gradient(
+    to top,
+    rgba(119, 182, 91, 1),
+    rgba(119, 182, 91, 0)
+  );
+}
