--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -281,7 +281,7 @@
   );
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: auto;
 
   .homexContent1 {
     display: flex;
@@ -290,6 +290,7 @@
     align-items: center;
 
     margin: 4rem;
+    padding-top: -3rem;
 
     .homexInnerContent {
       margin-left: 4rem;
@@ -314,6 +315,7 @@
     justify-content: flex-start;
     align-items: center;
     margin: 4rem;
+    padding-top: -3rem;
 
     .homexParagraphText2 {
       font-weight: 300;
@@ -323,6 +325,43 @@
 
     .homexRoomImage {
       margin-left: 8rem;
+    }
+  }
+
+  .homexContent3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 4rem;
+    padding-top: -3rem;
+
+    .homexParagraphText3 {
+      font-weight: 300;
+
+      margin-left: 6rem;
+
+      /* padding-top: 0.5rem; */
+    }
+  }
+
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5rem;
+    padding-top: -5rem;
+
+    .buttonLink {
+      width: 6rem;
+      height: 1.5rem;
+      background-color: #b4dfa1;
+      border: 1px solid #b4dfa1;
+      font-weight: 600;
+      font-size: x-small;
+
+      cursor: pointer;
     }
   }
 }
