--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -345,6 +345,16 @@
     }
   }
 
+  .homexContent4 {
+    margin: 4rem;
+
+    .homexTitleContent {
+      font-size: 2.8rem;
+      font-weight: 400;
+      color: #132445;
+    }
+  }
+
   .buttonContainer {
     display: flex;
     flex-direction: column;
