--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -381,3 +381,14 @@
     }
   }
 }
+
+.coContainer {
+  background: linear-gradient(
+    to top,
+    rgba(119, 182, 91, 1),
+    rgba(119, 182, 91, 0)
+  );
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden;
+}
