--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -407,6 +407,12 @@
         font-weight: 500;
         color: #132445;
       }
+
+      .coText {
+        font-size: 25.49px;
+        font-weight: 200;
+        margin-top: 1rem;
+      }
     }
   }
 }
