:rocket: Deploy blog design page

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -544,3 +544,37 @@
     }
   }
 }
+
+.blogContainer {
+  background: linear-gradient(
+    to top,
+    rgba(119, 182, 91, 1),
+    rgba(119, 182, 91, 0)
+  );
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+
+  .blogContents {
+    margin: 4rem;
+
+    .blogHeader {
+      font-size: 52.19px;
+      font-weight: 500;
+      color: #132445;
+    }
+
+    .blogParagraph {
+      font-size: 22px;
+      font-weight: 200;
+      margin-top: 1rem;
+    }
+
+    .blogHeader1 {
+      font-weight: 500;
+      font-size: 35px;
+      color: #132445;
+      margin-top: 5rem;
+    }
+  }
+}
