--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -599,6 +599,10 @@
     }
 
     .faqDropdown {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      transition: width 0.3s ease-in-out;
       width: 1200px;
       height: 143px;
       border: 1px solid #b4dfa1;
