--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -7,6 +7,7 @@
   width: 70rem;
   height: 92.4rem;
   border: 1px solid black;
+  border-radius: 2%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -48,9 +49,10 @@
 
 .miniCard {
   width: 60rem;
-  height: 15rem;
+  height: 19rem;
   border: none;
-  margin-top: 7rem;
+  border-radius: 0.5rem;
+  margin-top: 3rem;
   background-color: rgba(10, 10, 10, 0.5);
 }
 
@@ -68,24 +70,28 @@
 }
 
 .desc2 {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   color: white;
   font-weight: 100;
+  font-size: 1.6rem;
 }
 
 .button2 {
-  width: 6.5rem;
+  width: 7rem;
   height: 2rem;
   background-color: #b4dfa1;
   border: none;
+  border-radius: 2rem;
   font-weight: bolder;
   margin-top: 2rem;
+  cursor: pointer;
 }
 
 .miniCard2 {
   width: 60rem;
   height: 13rem;
   border: none;
+  border-radius: 0.5rem;
   margin-top: 8rem;
   background-color: rgba(10, 10, 10, 0.5);
 }
@@ -94,7 +100,8 @@
   width: 60rem;
   height: 15rem;
   border: none;
-  margin-top: 6rem;
+  border-radius: 0.5rem;
+  margin-top: 5rem;
   background-color: rgba(10, 10, 10, 0.5);
 }
 
