--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -133,6 +133,7 @@
   width: 20.4rem;
   height: 20.82rem;
   border: 1px solid #d9d9d9;
+  border-radius: 0.5rem;
   background-color: #d9d9d9;
 }
 
@@ -157,6 +158,7 @@
   width: 20.4rem;
   height: 20.82rem;
   border: 1px solid #b4dfa1;
+  border-radius: 0.5rem;
   background-color: #b4dfa1;
 }
 
@@ -164,5 +166,6 @@
   width: 20.4rem;
   height: 20.82rem;
   border: 1px solid #12af2b;
+  border-radius: 0.5rem;
   background-color: #12af2b;
 }
