:zap: Improve performance

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -5,7 +5,7 @@
 .card {
   margin-top: 2rem;
   width: 70rem;
-  height: 92.4rem;
+  height: 95.4rem;
   border: 1px solid black;
   border-radius: 2%;
   position: absolute;
@@ -22,7 +22,7 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 50rem;
-  margin: 6rem;
+  margin: 2.5rem;
 }
 
 .header {
@@ -52,7 +52,7 @@
   height: 19rem;
   border: none;
   border-radius: 0.5rem;
-  margin-top: 3rem;
+  margin-top: 1rem;
   background-color: rgba(10, 10, 10, 0.5);
 }
 
@@ -101,10 +101,12 @@
   height: 15rem;
   border: none;
   border-radius: 0.5rem;
-  margin-top: 5rem;
+  margin-top: 10rem;
   background-color: rgba(10, 10, 10, 0.5);
 }
 
 .images {
-  margin: -0.5rem;
+  /* width: 100vw;
+  height: 100vw; */
+  margin: -0.3rem;
 }
