--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -246,7 +246,7 @@
     justify-content: space-around;
     align-items: center;
     padding-top: 5rem;
-    margin: 1rem;
+    /* margin: 1rem; */
 
     .Imagetext {
       font-weight: 400;
@@ -254,9 +254,13 @@
     }
 
     .paragraphText {
-      font-weight: 200;
-      font-size: x-large;
+      font-weight: 300;
+      font-size: 1rem;
       padding-top: 1rem;
+    }
+
+    .productImageContainer1 {
+      margin-bottom: 5.5rem;
     }
 
     .buttonLink {
@@ -264,6 +268,7 @@
       height: 1.5rem;
       background-color: #b4dfa1;
       border: 1px solid #b4dfa1;
+      border-radius: 1rem;
       font-weight: 600;
       font-size: x-small;
       margin-top: 1rem;
