--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -313,15 +313,24 @@
     }
 
     .homexCardContainer {
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
       margin-top: 5rem;
 
       .homexCard1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 70rem;
         height: 20rem;
         border: 1px solid #b4dfa1;
 
         .images {
-          width: 10rem;
+          width: 5rem;
           height: 10rem;
         }
       }
