:ambulance: Critical hotfix

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -333,6 +333,10 @@
           width: 5rem;
           height: 10rem;
         }
+
+        .homexCardText {
+          font-size: 35.49px;
+        }
       }
     }
   }
