--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -319,6 +319,7 @@
         rgba(119, 182, 91, 0)
       );
       margin-top: 5rem;
+      border-radius: 2rem;
 
       .homexCard1 {
         display: flex;
@@ -326,16 +327,30 @@
         justify-content: center;
         align-items: center;
         width: 70rem;
-        height: 20rem;
-        border: 1px solid #b4dfa1;
+        height: 30rem;
+        border: #b4dfa1;
+        border-radius: 2rem;
 
-        .images {
-          width: 5rem;
-          height: 10rem;
+        .homexImages {
+          /* margin-top: -1rem; */
+
+          .images {
+            width: 5rem;
+            height: 10rem;
+          }
         }
 
         .homexCardText {
           font-size: 35.49px;
+          font-weight: 500;
+          color: #132445;
+          margin-top: 3rem;
+        }
+
+        .homexCardParagraph {
+          font-size: 30.49px;
+          font-weight: 300;
+          margin-top: 3rem;
         }
       }
     }
