:sparkles: New features for the homex page updated

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -373,6 +373,7 @@
 
       .card2TextContents {
         margin-top: 2rem;
+        margin-left: 2rem;
 
         .homexCardText1 {
           font-size: 35.49px;
@@ -387,6 +388,50 @@
         }
 
         .homexButton {
+          width: 8rem;
+          height: 2.5rem;
+          background-color: #b4dfa1;
+          border: none;
+          font-weight: bolder;
+          margin-top: 3rem;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .homexCard3 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      width: 70rem;
+      height: 30rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      border: #b4dfa1;
+      border-radius: 2rem;
+      margin-top: 3rem;
+
+      .card3TextContents {
+        margin-top: 2rem;
+        margin-left: 2rem;
+
+        .homexCardText2 {
+          font-size: 35.49px;
+          font-weight: 500;
+          color: #132445;
+        }
+
+        .homexCardParagraph2 {
+          font-size: 20.49px;
+          font-weight: 300;
+          margin-top: 2rem;
+        }
+
+        .homexButton1 {
           width: 8rem;
           height: 2.5rem;
           background-color: #b4dfa1;
