--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -442,6 +442,64 @@
         }
       }
     }
+
+    .homexCard4 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      width: 70rem;
+      height: 35rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      border: #b4dfa1;
+      border-radius: 2rem;
+      margin-top: 3rem;
+
+      .homexCardText3 {
+        font-size: 35.49px;
+        font-weight: 500;
+        color: #132445;
+      }
+
+      .homexCardParagraph3 {
+        font-size: 20.49px;
+        font-weight: 300;
+        margin-top: -2rem;
+      }
+    }
+
+    .homexCard5 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      width: 70rem;
+      height: 12rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      border: #b4dfa1;
+      border-radius: 2rem;
+      margin-top: 3rem;
+
+      .homexCardText4 {
+        font-size: 35.49px;
+        font-weight: 500;
+        color: #132445;
+      }
+
+      .homexCardParagraph4 {
+        font-size: 20.49px;
+        font-weight: 300;
+        margin-top: -2rem;
+      }
+    }
   }
 }
 
