--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -500,6 +500,40 @@
         margin-top: -2rem;
       }
     }
+
+    .homexCard6 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      width: 70rem;
+      height: 30rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      border: #b4dfa1;
+      border-radius: 2rem;
+      margin-top: 3rem;
+
+      .card5TextContents {
+        margin-top: 2rem;
+        margin-left: 2rem;
+
+        .homexCardText5 {
+          font-size: 35.49px;
+          font-weight: 500;
+          color: #132445;
+        }
+
+        .homexCardParagraph5 {
+          font-size: 20.49px;
+          font-weight: 300;
+          margin-top: 2rem;
+        }
+      }
+    }
   }
 }
 
