--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -238,7 +238,7 @@
 
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: auto;
 
   .productImages {
     display: flex;
@@ -260,7 +260,7 @@
     }
 
     .productImageContainer1 {
-      margin-bottom: 5.5rem;
+      margin-bottom: 8.5rem;
     }
     .productImageContainer2 {
       margin-bottom: 8.5rem;
