--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1002,3 +1002,14 @@
     }
   }
 }
+
+.workContainer {
+  background: linear-gradient(
+    to top,
+    rgba(119, 182, 91, 1),
+    rgba(119, 182, 91, 0)
+  );
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+}
