--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1012,4 +1012,37 @@
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
+
+  .workContent1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem;
+
+    .workContentHeader {
+      font-size: 3rem;
+      font-weight: 400;
+      color: #132445;
+    }
+  }
+
+  .workContent2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .workCard1 {
+      width: 70rem;
+      height: 28rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+    }
+  }
 }
