--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1043,6 +1043,36 @@
         rgba(119, 182, 91, 1),
         rgba(119, 182, 91, 0)
       );
+
+      .workCardContent1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3rem;
+
+        .workCardHeader {
+          font-size: 35.49px;
+          font-weight: 400;
+          color: #132445;
+        }
+
+        .workCardParagraphs1 {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          margin-top: 1rem;
+
+          .workCardParagraphs11 {
+            margin-right: 15rem;
+          }
+          .workCardParagraphs12 {
+            margin-left: 5rem;
+            margin-bottom: 2rem;
+          }
+        }
+      }
     }
   }
 }
