--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1080,7 +1080,7 @@
     }
     .workCard2 {
       width: 70rem;
-      height: 28rem;
+      height: 20rem;
       border: 1px #b4dfa1;
       border-radius: 2rem;
       background: linear-gradient(
@@ -1096,6 +1096,35 @@
         justify-content: space-around;
         align-items: center;
         margin-top: 3rem;
+
+        .workCardHeader2 {
+          font-size: 30.49px;
+          font-weight: 400;
+          color: #132445;
+        }
+
+        .workCardHeader22 {
+          font-size: 20.49px;
+          font-weight: 600;
+          margin-left: 1rem;
+          margin-top: 2rem;
+        }
+
+        .workCardParagraph2 {
+          font-weight: 300;
+        }
+
+        .workButton {
+          width: 6rem;
+          height: 2rem;
+          background-color: #b4dfa1;
+          border: 1px solid #b4dfa1;
+          font-weight: 600;
+          font-size: small;
+
+          cursor: pointer;
+          margin-top: 2rem;
+        }
       }
     }
   }
