--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -933,6 +933,70 @@
       font-size: 52.19px;
       font-weight: 500;
       color: #132445;
+      margin-bottom: 1rem;
+    }
+
+    .wpParagraph {
+      font-size: 20.49px;
+      font-weight: 200;
+    }
+  }
+
+  .wpCardContents {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .wpHeader {
+      font-size: 30.49px;
+      font-weight: 400;
+      color: #132445;
+      text-decoration: none;
+      margin-bottom: 1rem;
+      position: relative;
+    }
+
+    .wpHeader::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 2px;
+      width: 100%;
+      height: 2px; /* Thickness of the underline */
+      background-color: #132445;
+    }
+
+    .wpCard1 {
+      width: 70rem;
+      height: 24rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContents1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpCardHeader1 {
+          font-size: 25px;
+          font-weight: 200;
+          margin-bottom: 2rem;
+        }
+
+        .wpCardParagraph1 {
+          font-weight: 200;
+        }
+      }
     }
   }
 }
