--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -969,7 +969,7 @@
 
     .wpCard1 {
       width: 70rem;
-      height: 24rem;
+      height: 23rem;
       border: 1px #b4dfa1;
       border-radius: 2rem;
       background: linear-gradient(
@@ -994,6 +994,132 @@
         }
 
         .wpCardParagraph1 {
+          font-weight: 200;
+        }
+      }
+    }
+
+    .wpCard2 {
+      width: 70rem;
+      height: 23rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContents2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpCardHeader2 {
+          font-size: 25px;
+          font-weight: 200;
+          margin-bottom: 2rem;
+        }
+
+        .wpCardParagraph2 {
+          font-weight: 200;
+        }
+      }
+    }
+    .wpCard3 {
+      width: 70rem;
+      height: 23rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContents3 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpCardHeader3 {
+          font-size: 25px;
+          font-weight: 200;
+          margin-bottom: 2rem;
+        }
+
+        .wpCardParagraph3 {
+          font-weight: 200;
+        }
+      }
+    }
+
+    .wpCard4 {
+      width: 70rem;
+      height: 23rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContents4 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpCardHeader4 {
+          font-size: 25px;
+          font-weight: 200;
+          margin-bottom: 2rem;
+        }
+
+        .wpCardParagraph4 {
+          font-weight: 200;
+        }
+      }
+    }
+    .wpCard5 {
+      width: 70rem;
+      height: 23rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContents5 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpCardHeader5 {
+          font-size: 25px;
+          font-weight: 200;
+          margin-bottom: 2rem;
+        }
+
+        .wpCardParagraph5 {
           font-weight: 200;
         }
       }
