--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1198,6 +1198,35 @@
         }
       }
     }
+    .wpTextContainer2 {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin: 3rem;
+      padding-right: 30rem;
+
+      .wpText2 {
+        font-size: 50.19px;
+        font-weight: 400;
+        color: #132445;
+        margin-bottom: 1rem;
+      }
+    }
+
+    .wpCard8 {
+      width: 70rem;
+      height: 15rem;
+      border: 1px solid #12180f;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    }
   }
 }
 
