--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1216,7 +1216,7 @@
 
     .wpCard8 {
       width: 70rem;
-      height: 15rem;
+      height: 80rem;
       border: 1px solid #12180f;
       border-radius: 2rem;
       background: linear-gradient(
@@ -1226,6 +1226,44 @@
       );
       margin-top: 2rem;
       margin-bottom: 2rem;
+
+      .wpCardContent8 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpTextContainer8 {
+          margin-bottom: 20rem;
+          .wpCardHeader8 {
+            font-size: 35px;
+            font-weight: 200;
+            margin-bottom: 2rem;
+            margin-left: 2rem;
+            color: #132445;
+          }
+          .wpCardParagraph8 {
+            font-size: 22px;
+            font-weight: 200;
+            white-space: nowrap;
+            margin-bottom: 1rem;
+            margin-left: 2rem;
+          }
+          .wpCardParagraph8i {
+            font-size: 22px;
+            font-weight: 200;
+            white-space: nowrap;
+
+            margin-left: 4rem;
+          }
+        }
+
+        .wpImageContainer8 {
+          margin-left: 2rem;
+          margin-bottom: 18rem;
+        }
+      }
     }
   }
 }
