--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1216,8 +1216,8 @@
 
     .wpCard8 {
       width: 70rem;
-      height: 80rem;
-      border: 1px solid #12180f;
+      height: 68rem;
+      border: 1px #b4dfa1;
       border-radius: 2rem;
       background: linear-gradient(
         to right,
@@ -1260,6 +1260,58 @@
         }
 
         .wpImageContainer8 {
+          margin-left: 2rem;
+          margin-bottom: 18rem;
+        }
+      }
+    }
+
+    .wpCard9 {
+      width: 70rem;
+      height: 55rem;
+      border: 1px #b4dfa1;
+      border-radius: 2rem;
+      background: linear-gradient(
+        to right,
+        rgba(119, 182, 91, 1),
+        rgba(119, 182, 91, 0)
+      );
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+
+      .wpCardContent9 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 3rem;
+
+        .wpTextContainer9 {
+          margin-bottom: 20rem;
+          .wpCardHeader9 {
+            font-size: 35px;
+            font-weight: 200;
+            margin-bottom: 2rem;
+            margin-left: 2rem;
+            color: #132445;
+          }
+          .wpCardParagraph9 {
+            font-size: 22px;
+            font-weight: 200;
+            white-space: nowrap;
+            margin-bottom: 1rem;
+            margin-left: 2rem;
+          }
+          .wpCardParagraph9i {
+            font-size: 22px;
+            font-weight: 200;
+            white-space: nowrap;
+
+            margin-left: 4rem;
+          }
+        }
+
+        .wpImageContainer9 {
           margin-left: 2rem;
           margin-bottom: 18rem;
         }
